@@ -14,6 +14,8 @@
 
 	* sp-rect.c (sp_rect_set_arg): Implemented Gtk+ argument setting
 
+	* ellipse-context.c, ellipse-context.h: Ditto
+
 2000-09-12  Lauris Kaplinski  <lauris@helixcode.com>
 
 	* src/*.c, glade/desktop.*, src/dialog/desktop-properties.*:
